# deepseaguard-old-ui

./: .env  .env.example  .gitignore  DeepSeaGuard Build Log.md  README.md  README_FINAL_WORKING.md  README_FIXED.md  README_ISA_EXPORT.md  README_RESTORED.md  deploy.sh  feature_gaps.md  implementation_guide.md  index.html  jest.config.js  package-lock.json  package.json  project_analysis.md  setup_deployment.sh  todo.md  vite.config.js
deepseaguard_realtime_complete/: INVESTOR_DEMO_GUIDE.md  README.md  package-lock.json  start.bat  start.sh
deepseaguard_realtime_complete/backend/: requirements.txt
docs/: api_docs.md  isa_standards.md  user_guide.md
microservices/insight-engine/: .env.example  .gitignore  README.md  mapCircle.geojson  pyproject.toml  randomShapeMap.geojson
microservices/insight-engine/alembic/: env.py
microservices/insight-engine/alembic/versions/: ababa21f9412_enable_postgis_and_add_geom_columns.py  c4dc7cf4c602_init_schema.py
microservices/insight-engine/app/: main.py  models.py
microservices/insight-engine/app/config/: settings.py  thresholds.py
microservices/insight-engine/app/services/: alerts_ingest.py  db.py  dead_auv_monitor.py  environmental_monitor.py  insights.py  telemetry_ingest.py  zone_detector.py
microservices/insight-engine/scripts/: load_zones.py
microservices/insight-engine/tests/: test_db_connection.py  test_zone_detector.py
server/: package-lock.json  package.json  server.js
src/: App.jsx  fourier-series.py  fourier_series_animation.html  fourier_series_animation.py  index.css  main.jsx
src/config/: api.js  (+1 more)
(+85 files in other folders)
